@@ -1,7 +1,10 @@
 Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul
 
 version 2.10.4:
-	TODO
+	IRC:
+	* Disable periodic WHO timer.  IRC channel user lists will no
+	  longer automatically display away status, but libpurple will be
+	  much kinder to the network.
 
 version 2.10.3 (03/26/2012):
 	MSN:
